<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_template_message">
    <font color="#242142">Ingresa a tu correo </font>
    <font color="#7993BE">%1$s</font>
    <font color="#242142"> \n y da click en la liga que te enviamos.</font>
    </string>
    <string name="onboarding_form_title_toolbar_text_address">Captura tu domicilio</string>
    <string name="onboarding_form_title_toolbar_text_rfc">Completa tu RFC</string>
    <string name="onboarding_form_title_toolbar_text_email">Captura tu e-mail</string>
    <string name="onboarding_form_title_toolbar_text_account_activation">Activa tu cuenta</string>
    <string name="onboarding_form_title_toolbar_text_phone_activation">Ingresa tu número\ncelular</string>
    <string name="onboarding_form_title_toolbar_text_pin_validation">Te enviamos un código SMS</string>
    <string name="onboarding_form_title_toolbar_text_pass_creation">Crea tu contraseña</string>
    <string name="onboarding_form_title_toolbar_text_pin_creation">Crea tu código de\nseguridad personal</string>
    <string name="onboarding_form_title_toolbar_text_pass_criteria_1">Caracteres especiales</string>
    <string name="onboarding_form_title_toolbar_text_pass_criteria_2">Letras minúsculas</string>
    <string name="onboarding_form_title_toolbar_text_pass_criteria_3">Letras mayúsculas</string>
    <string name="onboarding_form_title_toolbar_text_pass_criteria_4">Números</string>
    <string name="onboarding_form_title_toolbar_text_pass_criteria_5">No usar 3 caracteres iguales seguidos</string>
    <string name="onboarding_form_title_toolbar_text_pass_criteria_6">Mínimo 6 caracteres y máximo de 20</string>
    <string name="onboarding_form_title_toolbar_text_pass_criteria_7">No incluir tu nombre</string>
    <string name="onboarding_form_title_hin_street">Calle*</string>
    <string name="onboarding_form_title_hin_num_ext">Número exterior*</string>
    <string name="onboarding_form_title_hin_num_int">Número interior</string>
    <string name="onboarding_form_title_hint_cp">Código Postal*</string>
    <string name="onboarding_form_title_hint_colony">Colonia*</string>
    <string name="onboarding_form_title_hint_city">Ciudad*</string>
    <string name="onboarding_form_title_hint_rfc">XXXXXXXXXX*</string>
    <string name="onboarding_form_title_hint_rfc_message">Ingresa tu homoclave, son los últimos 3 dígitos</string>
    <string name="onboarding_form_title_hint_email_message">Ingresa tu correo personal</string>
    <string name="onboarding_form_title_hint_account_activation_button_message">No recibí el correo, reenviar.</string>
    <string name="onboarding_form_title_hint_phone_activation_button_message">Captura tu celular y te enviaremos un código de confirmación.</string>
    <string name="onboarding_form_title_hint_email">e-mail*</string>
    <string name="onboarding_form_title_hint_phone">Ingresa tu número celular*</string>
    <string name="onboarding_form_title_street">Calle</string>
    <string name="onboarding_form_title_num_ext">Número exterior</string>
    <string name="onboarding_form_title_num_int">Número interior</string>
    <string name="onboarding_form_title_cp">Código postal</string>
    <string name="onboarding_form_title_colony">Colonia</string>
    <string name="onboarding_form_title_city">Ciudad</string>
    <string name="onboarding_form_title_rfc">RFC</string>
    <string name="onboarding_form_title_phone">Teléfono</string>
    <string name="onboarding_form_title_name_list_value">Nombre</string>
    <string name="onboarding_form_title_lastname_list_value">Primer apellido</string>
    <string name="onboarding_form_title_surname_list_value">Segundo apellido</string>
    <string name="onboarding_form_title_birthdate_list_value">Fecha de nacimiento</string>
    <string name="onboarding_form_title_genre_list_value">Género</string>
    <string name="onboarding_form_title_curp_list_value">CURP</string>
    <string name="onboarding_form_title_edit_data_user_toolbar_text">Captura tu %1$s</string>
    <string name="onboarding_view_title_button_create_acccount">Regístrate</string>
    <string name="onboarding_view_title_button_have_acccount">Iniciar sesión</string>
    <string name="onboarding_view_dialog_title">¡BIENVENID@!</string>
    <string name="onboarding_view_dialog_message">Si ya tienes cuenta con ASP, es necesario que te registres en esta nueva experiencia. Da click en el botón \"Regístrate\" y actualizaremos la información de tu cuenta.</string>
    <string name="register_request_title_text">Regístrate</string>
    <string name="register_request_subtitle_text">Necesitarás tu número celular e INE vigente</string>
    <string name="register_request_button_text">Iniciar mi registro</string>
    <string name="register_request_checkbox_text_1">Acepto</string>
    <string name="register_request_checkbox_text_2">términos y condiciones</string>
    <string name="register_request_checkbox_text_3">aviso de privacidad</string>
    <string name="onboarding_create_pint_description_message_text">Este código de seguridad te permitirá autorizar operaciones en tu aplicación.\n\n Recuerda que este código de seguridad personal es el que usarás para autorizar tus operaciones.</string>
    <string name="onboarding_create_pin_checker_message_text">Quiero usar mi huella para realizar operaciones e ingresar a las aplicaciones.</string>
    <string name="register_infor_text_title_greetings_user_logged">¡Hola %1$s!</string>
    <string name="register_url_terms_url">https://aspintegraopciones.com/fr/ayuda/terminos-condiciones.html</string>
    <string name="register_url_priv_url">https://aspintegraopciones.com/fr/ayuda/terminos-condiciones.html</string>
    <string name="dialog_close_option_text">cerrar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_dashboard">MainDashboardActivity</string>
    <string name="dashboard_main_send_money_option_text">Envía\nDinero</string>
    <string name="dashboard_main_receive_money_option_text">Recibe\nDinero</string>
    <string name="dashboard_main_pay_asp_credit_option_text">Paga tu\ncrédito ASP</string>
    <string name="dashboard_main_pay_services_option_text">Pagar\nServicios</string>
    <string name="dashboard_main_phone_charging_option_text">Recargas\nTelefónicas</string>
    <string name="todo">TODO</string>
    <string name="welcome_view_title_text">¡Listo!</string>
    <string name="welcome_view_description_title_text">Vive la mejor experiencia\n digital con ASP Pago</string>
    <string name="reboot_view_description_title_text">Se reiniciará la aplicación y podrás ingresar en la opción “Iniciar sesión”</string>
    <string name="welcome_view_button_text">Ingresar</string>
    <string name="pin_validation_continue_button">Continuar</string>
    <string name="pin_validation_resend_text">No recibí el código, reenviar.</string>
    <string name="pin_validation_capture_code_text">Captura el código recibido.</string>
    <string name="create_pin_continue_button_text">Continuar</string>
    <string name="create_pin_add_4_digits_text">Ingresa 4 dígitos numéricos.</string>
    <string name="create_password_continue_button_text">Continuar</string>
    <string name="create_password_hint_input_text">Ingresa tu contraseña</string>
    <string name="data_confirmation_continue_button_text">Continuar</string>
    <string name="data_confirmation_text_description">Recopilamos tus datos para facilitar el registro, necesitamos que nos confirmes tu información. \n\n En caso de tener un dato erróneo, puedes editarlo presionando el icono que se encuentra en cada campo.</string>
    <string name="data_confirmation_toolbar_text_">Confirma tus datos</string>
    <string name="form_data_user_continue_button_text">Continuar</string>
    <string name="data_form_user_toolbar_text">Captura tu domicilio</string>
    <string name="register_login_continue_button_text">Continuar</string>
    <string name="register_login_hint_input_text">Ingresa tu número celular</string>
    <string name="register_login_toolbar_text">Inicia sesión</string>
    <string name="ocr_validation_continue_button_text">Continuar</string>
    <string name="ocr_data_capture_ine_rear_text">Capturar INE reverso</string>
    <string name="ocr_data_capture_ine_front_text">Capturar INE frente</string>
    <string name="dashboard_main_detail_text">Detalle</string>
    <string name="dashboard_main_amount_avalaible_text">Mi saldo disponible</string>
    <string name="dashboard_main_my_account_text">Mi cuenta</string>
    <string name="join_text">y</string>
    <string name="send_money">Envía dinero</string>
    <string name="send_money_account">Beneficiario</string>
    <string name="send_money_favorites">Favoritos</string>
    <string name="send_money_register_account">Cuenta nueva</string>
    <string name="send_money_code_security">Ingresa tu código de seguridad personal</string>
    <string name="send_money_success">El pago fue realizado</string>
    <string name="send_money_amount">Monto</string>
    <string name="send_money_contact">Beneficiario</string>
    <string name="send_money_reference">Referencia</string>
    <string name="send_money_tracking_code">Clave de rastreo</string>
    <string name="send_money_add_to_favorites">Añadir cuenta a favoritos</string>
    <string name="receive_money">Recibir dinero</string>
    <string name="receive_money_spei">SPEI</string>
    <string name="receive_money_branch">Sucursal</string>
    <string name="receive_money_easy_window">Ventanilla Fácil</string>
    <string name="credit_payment_toolbar_title">Paga tu crédito ASP</string>
    <string name="confirm">Confirmar</string>
    <string name="continue_flow">Continuar</string>
    <string name="payment_service_title">¿Dónde encuentro la referencia?</string>
    <string name="payment_service_title_important">Importante:</string>
    <string name="ine_message">1.- Coloca el lado de tu INE/IFE que deseas fotografiar\n\n2.- Enfoca la cámara para que la imagen solo tome el recuadro de la identificación.\n\nSe debe tomar sin hacer movimientos bruscos para garantizar que la imagen y los textos de la misma no se vean <b>\'movidos\'. NO GIRES LA CÁMARA.</b>\n\n3.- La iluminación debe ser uniforme, es decir, no debe presentar zonas de mucha luz y zonas   de mucha sombra. Evite que existan reflejos de luz.</string>
    <string name="register_info_hello_string_template">¡Hola!</string>
    <string name="register_info_hint_pass_input">Ingresa tu contraseña</string>
    <string name="register_info_forgot_password_text_hint">Olvidé mi contraseña</string>
    <string name="register_info_button_accept">Ingresar</string>
    <string name="register_info_login_biometrics_button_text">Ingresar con huella \no rostro</string>
    <string name="success_pin_title_text">Cambio exitoso</string>
    <string name="success_pin_subtitle_text">Tu nip ha sido asignado exitosamente</string>
    <string name="success_pin_description_text">Para completar el proceso necesitas seguir las siguientes instrucciones:</string>
    <string name="success_pin_continue_button">Continuar</string>
    <string name="ine_info_title_text">Sigue los siguientes pasos a continuación para tomar la foto correctamente de tu INE/IFE:</string>
    <string name="ine_info_important_text">Importante:</string>
</resources>