<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <asp.android.aspandroidmaterial.ui.toolbars.ASPMaterialToolbarMainDashboard
            android:id="@+id/pinSuccessChangeToolbar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/toolbar_top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinSuccessChangeToolbar"
            app:srcCompat="@drawable/check_beneficiary_green"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/success_pin_title_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/pinSuccessChangeToolbar" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/success_pin_subtitle_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/success_pin_description_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintVertical_bias="0.0">

            <include
                android:id="@+id/step_1_layout"
                layout="@layout/pin_assignation_step_item_layout" />

            <include
                android:id="@+id/step_2_layout"
                layout="@layout/pin_assignation_step_item_layout" />

            <include
                android:id="@+id/step_3_layout"
                layout="@layout/pin_assignation_step_item_layout" />

            <include
                android:id="@+id/step_4_layout"
                layout="@layout/pin_assignation_step_item_layout" />

        </LinearLayout>

        <asp.android.aspandroidmaterial.ui.buttons.ASPMaterialIconButtonV3
            android:id="@+id/buttonContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="80dp"
            android:text="@string/success_pin_continue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
