<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".ui.fragments.codi.PayPendingMovFragment">

    <asp.android.aspandroidmaterial.ui.toolbars.ASPMaterialToolbarMainDashboard
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/toolbar_top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:textAppearance="@style/Ubuntu.w700.color_242142.s20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/send_money_code_security" />

    <com.chaos.view.PinView
        android:id="@+id/createQrPinValidator"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginStart="@dimen/dp_16"
        android:cursorVisible="true"
        android:inputType="numberPassword"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:cursorWidth="@dimen/dp_2"
        app:hideLineWhenFilled="false"
        app:itemCount="4"
        app:itemHeight="65dp"
        app:itemRadius="@dimen/dp_16"
        app:itemSpacing="@dimen/dp_8"
        app:itemWidth="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:lineColor="@color/pinlinecolor"
        app:lineWidth="@dimen/dp_2"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_16"
        android:textAppearance="@style/Ubuntu.w400.color_333333.s12"
        android:text="@string/create_pin_add_4_digits_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createQrPinValidator" />

    <asp.android.aspandroidmaterial.ui.buttons.ASPMaterialIconButtonV3
        android:id="@+id/btn_continue_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_42"
        android:layout_marginBottom="@dimen/margin_bottom_button"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/confirm"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>